--- a/public/CSS/style.scss
+++ b/public/CSS/style.scss
@@ -65,6 +65,7 @@ h2 {
 h3 {
   font-size: 1.8em;
   font-weight: 600;
+  line-height: 1.2em;
 }
 
 h4 {
@@ -109,6 +110,7 @@ Introductie pagina
   text-align: center;
   padding-bottom: 0;
   padding-top: 10vh;
+  margin-bottom: 0;
 
   .content-inner {
     padding: 5vh 35px;
@@ -378,21 +380,23 @@ Pagina termen-btn
 .termen {
   ul {
     li:nth-child(even) {
-      background: #E9EBF1;
+      background: white;
     }
 
     li:nth-child(odd) {
-      background: white;
+      background: none;
     }
 
     li {
       padding: 20px;
       display: grid;
-      grid-template-columns: 20% 70%;
-      grid-column-gap: 10%;
+      grid-template-columns: 35% 60%;
+      grid-column-gap: 5%;
       // justify-content: space-between;
       h3 {
         padding-right: 20px;
+        font-weight: 400;
+        color: $kleur_blauw;
       }
     }
   }
@@ -463,6 +467,11 @@ Pagina voedingsmiddelen
 */
 
 .voeding_extra {
+
+  header {
+    margin-bottom: 20px;
+  }
+
   .content-inner {
     padding: 5px 0 0;
   }
@@ -576,6 +585,15 @@ Pagina oefeningen per spiergroep
 
 .oefeningen-per-spiergroep {
   .oefeningen-lijst {
+
+    a:nth-child(even) li {
+      background: none;
+    }
+
+    a:nth-child(odd) li {
+      background: white;
+    }
+
     li {
       display: grid;
       grid-template-columns: 40% 40% 20%;
@@ -584,7 +602,6 @@ Pagina oefeningen per spiergroep
 
       img {
         max-height: 100px;
-        text-align: left;
       }
 
       h3 {
@@ -601,12 +618,20 @@ Pagina oefeningen per spiergroep
 
 .overzicht-oefeningen {
   .oefeningen-lijst {
+
+    a:nth-child(even) li {
+      background: none;
+    }
+
+    a:nth-child(odd) li {
+      background: white;
+    }
+
     li {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 30px 0;
-      border-bottom: 2px solid #d31027;
+      padding: 20px;
 
       #forward-btn {
         max-height: 25px;
@@ -645,6 +670,11 @@ Pagina oefeningen per spiergroep
 Oefeningen detailpagina
 */
 .oefening-detail {
+
+  header {
+    margin-bottom: 20px;
+  }
+
   .video-container {
     margin-bottom: 20px;
   }
@@ -661,25 +691,25 @@ Oefeningen detailpagina
     }
 
     .primaire-spier {
-      border: 1px solid #d31027;
       padding: 10px 14px;
-      border-radius: 10px;
+      border-radius: 20px;
       font-size: 1.1em;
       width: 100px;
       text-align: center;
-      background-color: white;
+      background-color: $kleur_rood;
       margin-right: 20px;
+      color: white;
     }
 
     .secundaire-spier {
-      border: 1px solid #d31027;
       padding: 8px 12px;
       border-radius: 10px;
       font-size: 1em;
       width: 80px;
       text-align: center;
-      background-color: white;
+      background-color: $kleur_rood;
       margin-right: 10px;
+      color: white;
     }
 
     ol {
@@ -691,7 +721,6 @@ Oefeningen detailpagina
       li {
         padding: 15px 0;
         counter-increment: my-awesome-counter;
-        color: black;
         position: relative;
       }
 
@@ -703,7 +732,7 @@ Oefeningen detailpagina
         width: var(--size);
         height: var(--size);
         border-radius: 50%;
-        background: #d31027;
+        background: $kleur_rood;
         font-weight: bold;
         position: absolute;
         color: white;
@@ -745,17 +774,18 @@ Pagina informatie per spiergroep
   .pop-up-inner {
     background-color: black;
     margin: 15% auto;
-    padding: 20px;
+    padding: 30px;
     width: 80%;
-    color: white;
     border-radius: 15px;
 
     h3 {
       margin-bottom: 20px;
+      color: white;
     }
 
     p {
       padding-bottom: 10px;
+      color: white;
     }
   }
 
